Created the Game module and made it display a window when the game is started.